Refactor index.html and volvo.html to apply consistent body-text class for paragraphs; enhance main.css with new styles for focus areas, numbered lists, and quote grids for improved layout and readability.
Added Coop project

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     </div>
                     <div class="intro">
                         <img class="avatar" src="assets/images/sun-glasses.svg" alt="Profile picture">
-                        <p>I'm Maximilian, a UX / UI designer based in Gothenburg, Sweden with a background in digital design & digital media. I
+                        <p class="body-text">I'm Maximilian, a UX / UI designer based in Gothenburg, Sweden with a background in digital design & digital media. I
                             enjoy exploring what is unknown to me and finding new interests, which I believe gives me a greater understanding of
                             the big picture.</p>
                     </div>
