--- a/volvo.html
+++ b/volvo.html
@@ -49,12 +49,14 @@
                     <div class="body-subheader">Intro</div>
                     <h2>Challenge</h2>
                 </div>
-                <p>The existing manufacturing planning software, developed in the 1990s, presented a unique starting point. Two separate
-                    keyboard-only systems were in use - one for Gothenburg and another for Volvo's global plants. The complex legacy
-                    interface, with its steep learning curve and navigation challenges, needed a strategic approach for modernization.
+                <p class="body-text">Volvo's internal capacity planning system, a critical tool for global manufacturing
+                    operations, needed modernization. The existing system, while functional, was
+                    keyboard-only and lacked visual hierarchy, making it difficult for new team
+                    members to learn and slowing down daily operations. The goal was to create a
+                    more intuitive interface while preserving all essential functionality.
                 </p>
                 <br>
-                <p>For the MVP phase, we focused on the most frequently used features, aiming to transform them into an intuitive
+                <p class="body-text">For the MVP phase, we focused on the most frequently used features, aiming to transform them into an intuitive
                     interface (mouse-enabled, of course). A key challenge emerged in redesigning the user flow, as the original software
                     lacked clear navigation structure and location indicators. This initial release establishes the foundation for
                     future iterations, which will incorporate additional features based on user feedback and business priorities.</p>
@@ -67,7 +69,7 @@
                     <div class="body-subheader">Ways of working</div>
                     <h2>Segment by segment</h2>
                 </div>
-                <p>One of the key approaches was breaking down the complex system into manageable
+                <p class="body-text">One of the key approaches was breaking down the complex system into manageable
                     segments, analysing each workflow's functionality by asking questions like
                     "okay, so this is where you do X and Y. Does it connect to any other workflow
                     further away in time or is this it?". This iterative approach allowed for
@@ -86,7 +88,7 @@
                     <div class="body-subheader">Design System</div>
                     <h2>Building with existing resources</h2>
                 </div>
-                <p>With no established design system for internal enterprise software at Volvo, we
+                <p class="body-text">With no established design system for internal enterprise software at Volvo, we
                     leveraged AG-Grid's enterprise data grid library as our foundation. This
                     provided a robust framework for our table-heavy interface needs, while allowing
                     us to apply Volvo's visual identity. The approach balanced efficiency with
@@ -113,7 +115,7 @@
                     <div class="body-subheader">Design</div>
                     <h2>Thoughtful modernization</h2>
                 </div>
-                <p>The new design improved usability and efficiency while maintaining familiar
+                <p class="body-text">The new design improved usability and efficiency while maintaining familiar
                     workflows. Key updates included streamlined navigation, enhanced data
                     visualization, and consistent styling aligned with Volvo's brand identity. The
                     result provides a fresh experience for existing users while ensuring intuitive
@@ -124,7 +126,7 @@
                     <div class="stacked-image-item">
                         <div class="stacked-image-text">
                             <div class="body-subheader">Before & After  (Before image pixelated for confidentiality)</div>
-                            <p>One example of modernizing a core feature: The data table transformation shows
+                            <p class="body-text">One example of modernizing a core feature: The data table transformation shows
                                 how improved styling, clearer hierarchy, and enhanced functionality make
                                 information more accessible while maintaining familiarity for existing users.Added pixelation for legal 
                         </div>
@@ -147,7 +149,7 @@
                     <div class="body-subheader">Users</div>
                     <h2>Small user group, direct dialogue</h2>
                 </div>
-                <p>Since there aren't many users of the system, we had the advantage of direct
+                <p class="body-text">Since there aren't many users of the system, we had the advantage of direct
                     communication and feedback loops with each individual user. This close
                     relationship allowed us to quickly understand their needs and pain points,
                     making the development process more focused and efficient. No need for deeper
@@ -159,7 +161,7 @@
                     <div class="stacked-image-item">
                         <div class="stacked-image-text">
                             <div class="body-subheader">Feedback - Most used features</div>
-                            <p>Through direct conversations with users about this information-heavy interface,
+                            <p class="body-text">Through direct conversations with users about this information-heavy interface,
                                 we identified which elements they actually interacted with most frequently. This
                                 user insight helped guide our decluttering decisions, removing rarely-used
                                 features while preserving and enhancing essential functionality.</p>
@@ -170,7 +172,7 @@
                     </div>
                     <div class="stacked-image-item">
                         <div class="stacked-image-text">
-                            <p>Ideating based on feedback & dialogue</p>
+                            <p class="body-text">Ideating based on feedback & dialogue</p>
                         </div>
                         <div class="section-image shadow-default">
                             <img src="assets/images/volvo/order handling overview.png" alt="capacity orders new">
@@ -185,7 +187,7 @@
                 <div class="section-header">
                     <div class="body-subheader">Outcome</div>
                 </div>
-                <p style="font-size: var(--body---large)">The MVP successfully transformed a complex, keyboard-only legacy system into a
+                <p class="body-text" style="font-size: var(--body---large)">The MVP successfully transformed a complex, keyboard-only legacy system into a
                     modern, intuitive interface while preserving essential workflows. Through direct
                     dialogue when needed with the small user group, we created a solution that not
                     only improved efficiency but also set a new standard for internal software at
