Update index.html to wrap the arrow button in a link to the Telia project page for improved navigation.

--- a/index.html
+++ b/index.html
@@ -161,9 +161,11 @@
                                 <div class="left-title big">
                                     <p>Telia</p>             
                                 </div>
-                                <button class="arrowBtn">
-                                    <i class="feather-16" data-feather="arrow-right"></i>
-                                </button>
+                                <a href="telia.html" class="project-link">
+                                    <button class="arrowBtn">
+                                        <i class="feather-16" data-feather="arrow-right"></i>
+                                    </button>
+                                </a>
                             </div>
 
 
