Update index.html to wrap project titles for Coop and Telia in links for enhanced navigation.

--- a/index.html
+++ b/index.html
@@ -129,7 +129,9 @@
                             </div>
                             <div class="list-row">
                                 <div class="left-title big">
-                                    <p>Coop Insights</p>             
+                                    <p><a href="coop.html" class="project-link">
+                                        <p>Coop Insights</p>             
+                                    </a>
                                 </div>
                                 <a href="coop.html" class="arrowBtn">
                                     <i class="feather-16" data-feather="arrow-right"></i>
@@ -159,7 +161,9 @@
                             </div>
                             <div class="list-row">
                                 <div class="left-title big">
-                                    <p>Telia</p>             
+                                    <p><a href="telia.html" class="project-link">
+                                        <p>Telia</p>             
+                                    </a>
                                 </div>
                                 <a href="telia.html" class="project-link">
                                     <button class="arrowBtn">
