--- a/project-template.html
+++ b/project-template.html
@@ -23,7 +23,7 @@
 <body>
     <div class="top_nav">
         <div class="left">
-            <h1><a href="index.html">Maximilian Relam Wide</a></h1>
+            <h1><a href="home.html">Maximilian Relam Wide</a></h1>
         </div>
 
         <div class="right">
