dirty work on work page

--- a/work.html
+++ b/work.html
@@ -23,13 +23,48 @@
 <body>
     <div class="section">
         <div class="container">
+            <h1>need to fix this</h1>
             <div class="grid grid-work">
-                <div class="content-block">
-                    <div class="card-title">
-                        My Work
-                    </div>
-                    <!-- Add your work content here -->
+            <row1>
+                <div class="content-block featured-project">
+                    <a href="volvo.html" class="featured-project-link">
+                        <div class="titles">
+                            <div class="card-title">PPO</div>
+                            <div class="card-title second">Volvo Cars</div>
+                        </div>
+                        <img src="assets/images/volvo/Cover-Volvo.png" alt="Volvo Project">
+                    </a>
                 </div>
+                <div class="content-block featured-project">
+                    <a href="telia.html" class="featured-project-link">
+                        <div class="titles">
+                            <div class="card-title">Mitt Telia</div>
+                            <div class="card-title second">Telia Sverige</div>
+                        </div>
+                        <img src="assets/images/telia/cover telia.png" alt="Telia Project">
+                    </a>
+                </div>
+            </row1>
+            <row2>
+                <div class="content-block featured-project">
+                    <a href="coop.html" class="featured-project-link">
+                        <div class="titles">
+                            <div class="card-title">Coop Insights</div>
+                            <div class="card-title second">Coop Sverige</div>
+                        </div>
+                        <img src="assets/images/Coop/coop-insights-cover.png" alt="Coop">
+                    </a>
+                </div>
+                <div class="content-block featured-project">
+                    <a href="biljetter.html" class="featured-project-link">
+                        <div class="titles">
+                            <div class="card-title">Biljetter</div>
+                            <div class="card-title second">Hobby Project</div>
+                        </div>
+                        <img src="assets/images/placeholder.png" alt="Placeholder">
+                    </a>
+                </div>
+            </row2>
             </div>
         </div>
     </div>
