turned the footer into a component

--- a/about.html
+++ b/about.html
@@ -87,6 +87,7 @@
     <script src="index.js"></script>
     <script src="js/git-info.js"></script>
     <script src="js/nav.js"></script>
+    <script src="js/footer.js"></script>
     <script src="js/bounce-words.js"></script>
     <script>
         document.addEventListener('DOMContentLoaded', function() {
