--- a/work.html
+++ b/work.html
@@ -69,22 +69,8 @@
         </div>
     </div>
 
-    <div class="footer">
-        <div class="left">
-            <h3>Left side</h3>
-            <h3>Left Side</h3>
-        </div>
-        <div class="right">
-            <h3>Right side</h3>
-            <h3>Right Side</h3>
-        </div>
-    </div>
-
-    <!-- Load Feather Icons first -->
     <script src="https://unpkg.com/feather-icons"></script>
-    <!-- Then load our custom JavaScript -->
-    <script src="js/index.js"></script>
-    <script src="js/git-info.js"></script>
+    <script src="js/footer.js"></script>
     <script src="js/nav.js"></script>
     <script>
         document.addEventListener('DOMContentLoaded', function() {
