--- a/contact.html
+++ b/contact.html
@@ -34,19 +34,8 @@
         </div>
     </div>
 
-    <div class="footer">
-        <div class="left">
-            <h3>Left side</h3>
-            <h3>Left Side</h3>
-        </div>
-        <div class="right">
-            <h3>Right side</h3>
-            <h3>Right Side</h3>
-        </div>
-    </div>
-
-    <script src="index.js"></script>
-    <script src="js/git-info.js"></script>
+    <script src="https://unpkg.com/feather-icons"></script>
+    <script src="js/footer.js"></script>
     <script src="js/nav.js"></script>
     <script>
         document.addEventListener('DOMContentLoaded', function() {
