--- a/coop.html
+++ b/coop.html
@@ -155,7 +155,7 @@
                 <div class="quote-grid">
                     <div class="quote-card">
                         <div class="quote-content">
-                            <p class="quote-text">“Visiting the current portal doesn’t give me much to be honest. Visiting the site should give me something.”</p>
+                            <p class="quote-text">“Visiting the current portal doesn't give me much to be honest. Visiting the site should give me something.”</p>
                             <div class="quote-meta">
                                 <p class="quote-title">Supplier</p>
                             </div>
@@ -163,7 +163,7 @@
                     </div>
                     <div class="quote-card">
                         <div class="quote-content">
-                            <p class="quote-text">“There’s a lot of things that I wish you could do, for example: being able to have several users for the (our) same supplier.”</p>
+                            <p class="quote-text">“There's a lot of things that I wish you could do, for example: being able to have several users for the (our) same supplier.”</p>
                             <div class="quote-meta">
                                 <p class="quote-title">Supplier</p>
                             </div>
@@ -171,7 +171,7 @@
                     </div>
                     <div class="quote-card">
                         <div class="quote-content">
-                            <p class="quote-text">"“Tracking, if something stand out, noticing trends, create your own campaigns, there’s a lot of things you can do. Not sure what I would use though or like to see.”</p>
+                            <p class="quote-text">"Tracking, if something stand out, noticing trends, create your own campaigns, there's a lot of things you can do. Not sure what I would use though or like to see."</p>
                             <div class="quote-meta">
                                 <p class="quote-title">Supplier</p>
                             </div>
@@ -263,24 +263,13 @@ could focus and improve upon.
         </div>
     </div>
 
-    <div class="footer">
-        <div class="left">
-            <h3 id="last-commit">Loading last commit...</h3>
-            <h3>Left Side</h3>
-        </div>
-        <div class="right">
-            <h3>Right side</h3>
-            <h3>Right Side</h3>
-        </div>
-    </div>
-
-    <script src="index.js"></script>
-    <script src="js/git-info.js"></script>
+    <script src="https://unpkg.com/feather-icons"></script>
+    <script src="js/footer.js"></script>
     <script src="js/nav.js"></script>
     <script>
         document.addEventListener('DOMContentLoaded', function() {
             feather.replace();
-            initNavigation('work');
+            initNavigation('projects');
         });
     </script>
 </body>
