--- a/home.html
+++ b/home.html
@@ -274,26 +274,9 @@
         </div>
     </div>
 
-    <div class="footer">
-        <div class="left">
-            <h3 id="last-commit">Loading last commit...</h3>
-
-        </div>
-        <div class="right">
-            <h3>Made by me</h3>
-            <h3>Right Side</h3>
-        </div>
-    </div>
-
-    <!-- Load Feather Icons first -->
     <script src="https://unpkg.com/feather-icons"></script>
-    <script>
-        // Initialize Feather Icons
-        feather.replace();
-    </script>
-    <!-- Then load our custom JavaScript -->
+    <script src="js/footer.js"></script>
     <script src="js/index.js"></script>
-    <script src="js/git-info.js"></script>
     <script src="js/nav.js"></script>
     <script>
         document.addEventListener('DOMContentLoaded', function() {
