top nav fixed. work page as flex instead of grid for now. Need to fix nav padding

--- a/work.html
+++ b/work.html
@@ -23,9 +23,8 @@
 <body>
     <div class="section">
         <div class="container">
-            <h1>need to fix this</h1>
-            <div class="grid grid-work">
-            <row1>
+
+            <div class="work-projects">
                 <div class="content-block featured-project">
                     <a href="volvo.html" class="featured-project-link">
                         <div class="titles">
@@ -44,8 +43,6 @@
                         <img src="assets/images/telia/cover telia.png" alt="Telia Project">
                     </a>
                 </div>
-            </row1>
-            <row2>
                 <div class="content-block featured-project">
                     <a href="coop.html" class="featured-project-link">
                         <div class="titles">
@@ -64,7 +61,6 @@
                         <img src="assets/images/placeholder.png" alt="Placeholder">
                     </a>
                 </div>
-            </row2>
             </div>
         </div>
     </div>
