Update work.html to replace placeholder image with abstract image and adjust CSS for featured project height and layout consistency.

--- a/work.html
+++ b/work.html
@@ -58,7 +58,7 @@
                             <div class="card-title">Biljetter</div>
                             <div class="card-title second">Hobby Project</div>
                         </div>
-                        <img src="assets/images/placeholder.png" alt="Placeholder">
+                        <img src="assets/images/abstract.jpeg" alt="Placeholder">
                     </a>
                 </div>
             </div>
