--- a/work.html
+++ b/work.html
@@ -12,7 +12,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nokora:wght@100;300;400;700;900&display=swap" rel="stylesheet">
     <script src="node_modules/feather-icons/dist/feather.js"></script>
-    <title>Work - Max Portfolio</title>
+    <title>Work - Maximilian Relam Wide</title>
     <style>
         body {
             background-color: var(--color-neutral-background);
