Fix image filename in telia.html and add versioning query parameter to image in work.html for cache management.

--- a/telia.html
+++ b/telia.html
@@ -40,7 +40,7 @@
             </div>
 
             <div class="hero-image shadow-default">
-                <img src="assets/images/Telia/cover telia.png" alt="Telia Project Hero Image">
+                <img src="assets/images/Telia/cover-telia.png" alt="Telia Project Hero Image">
             </div>
 
             <div class="section">
