--- a/work.html
+++ b/work.html
@@ -40,7 +40,7 @@
                             <div class="card-title">Mitt Telia</div>
                             <div class="card-title second">Telia Sverige</div>
                         </div>
-                        <img src="assets/images/telia/cover-telia.png" alt="Telia Project">
+                        <img src="assets/images/telia/cover-telia.png?v=1" alt="Telia Project">
                     </a>
                 </div>
                 <div class="content-block featured-project">
