Update page titles in about.html and home.html to reflect full name "Maximilian Relam Wide".

--- a/home.html
+++ b/home.html
@@ -16,7 +16,7 @@
 
 
     
-    <title>Max Portfolio</title>
+    <title>Maximilian Relam Wide Portfolio</title>
     <style>
         body {
             background-color: var(--color-neutral-background);
