--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nokora:wght@100;300;400;700;900&display=swap" rel="stylesheet">
     
-    <title>About - Max Portfolio</title>
+    <title>About - Maximilian Relam Wide</title>
     <style>
         body {
             background-color: var(--color-neutral-background);
