--- a/coop.html
+++ b/coop.html
@@ -263,7 +263,7 @@ could focus and improve upon.
         </div>
     </div>
 
-    <script src="https://unpkg.com/feather-icons"></script>
+    <!-- <script src="https://unpkg.com/feather-icons"></script>
     <script src="js/footer.js"></script>
     <script src="js/nav.js"></script>
     <script>
@@ -271,7 +271,7 @@ could focus and improve upon.
             feather.replace();
             initNavigation('projects');
         });
-    </script>
+    </script> -->
 </body>
 
 </html>
