Restore script tags in coop.html and update tagline in home.html to enhance content clarity.

--- a/home.html
+++ b/home.html
@@ -208,7 +208,7 @@
                         Motto
                     </div>
     
-                    <p>Always with the user in mind</p>
+                    <p>Simplicity is at the heart of great design</p>
                 </div>
                 <div class="content-block clients">
                     <div class="card-title">
