Update tagline in home.html to reflect a more personal touch.

--- a/home.html
+++ b/home.html
@@ -43,7 +43,7 @@
                             the big picture.</p>
                     </div>
                     <div class="bonus-text">
-                        <div class="secondary">I'm Maximilian. I generate ideas, design solutions & shape digital products.</div>
+                        <div class="secondary">I wear glasses, but rarely for pictures.</div>
                     </div>
                 </div>
     
