Refine bio content in about.html for improved clarity. Update CSS styles for .bio-text to enhance typography and responsiveness across devices.

--- a/about.html
+++ b/about.html
@@ -41,7 +41,7 @@
                                 I take a holistic approach to design, ensuring that every decision not only enhances the user experience but also
                                 contributes to strategic goals. I work in short iterations, refining ideas thoughtfully and validating hypotheses
                                 effectively. I enjoy being involved in all aspects of a project, from strategy and UX/UI design to motion and
-                                interaction design—always keeping the user at the core of my process.
+                                interaction design–always keeping the user at the core of my process.
                             </p>
 
                         </div>
@@ -49,7 +49,7 @@
                             <p>
                                 With an understanding of front-end development, I bridge the gap between design and implementation, making collaboration
                                 with developers smoother and ensuring that ideas are both innovative and feasible. For me, simplicity is at the heart of
-                                great design. I believe design is about solving problems with clarity and purpose—creating something both useful and
+                                great design. I believe design is about solving problems with clarity and purpose–creating something both useful and
                                 well-reasoned.
                             </p>
                             <div>
