Update client logos in home.html and adjust CSS for improved layout and animation.

--- a/home.html
+++ b/home.html
@@ -216,15 +216,20 @@
                     </div>
                     <div class="client-logo-list">
                         <div class="client-logo-track">
-                            <img src="assets/images/logoplaceholder.png" alt="Company">
-                            <img src="assets/images/logoplaceholder.png" alt="Company">
-                            <img src="assets/images/logoplaceholder.png" alt="Company">
-                            <img src="assets/images/logoplaceholder.png" alt="Company">
-                            <!-- Duplicates for slideshow loop -->
-                            <img src="assets/images/logoplaceholder.png" alt="Company">
-                            <img src="assets/images/logoplaceholder.png" alt="Company">
-                            <img src="assets/images/logoplaceholder.png" alt="Company">
-                            <img src="assets/images/logoplaceholder.png" alt="Company">
+                            <img src="assets/images/clients/casa-soleado.png" alt="Company">
+                            <img src="assets/images/clients/cleancenter.png" alt="Company">
+                            <img src="assets/images/clients/minnesplatsen.png" alt="Company">
+                            <img src="assets/images/clients/volvo.png" alt="Company">
+                            <img src="assets/images/clients/telia.png" alt="Company">
+                            <img src="assets/images/clients/coop.png" alt="Company">
+                            <!-- Duplicate for seamless effect -->
+                            <img src="assets/images/clients/casa-soleado.png" alt="Company">
+                            <img src="assets/images/clients/cleancenter.png" alt="Company">
+                            <img src="assets/images/clients/minnesplatsen.png" alt="Company">
+                            <img src="assets/images/clients/volvo.png" alt="Company">
+                            <img src="assets/images/clients/telia.png" alt="Company">
+                            <img src="assets/images/clients/coop.png" alt="Company">
+                            
                         </div>
                     </div>
                 </div>
