--- a/work.html
+++ b/work.html
@@ -24,6 +24,10 @@
 <body>
     <div class="section">
         <div class="container">
+            <div class="section-header">
+                <div class="body-subheader">Work</div>
+                <h2>Selected projects</h2>
+            </div>
             <!-- PPO -->
             <div class="work-projects">
                 <div class="content-block featured-project">
