Removed contact.html file and update navigation in nav.js to link to resume.html instead.
Started on a design for the resume page.

Added link to my resume.

--- a/home.html
+++ b/home.html
@@ -267,7 +267,9 @@
                         <h3>maximilian.relam@gmail.com</h3>
                     </div>
                         <div class="links">
-                            <p>CV</p>
+                            <a href="assets/images/Maximilian-Relam-Wide-CV.pdf" target="_blank">
+                                <p>CV</p>
+                            </a>
                             <p><a href="https://www.linkedin.com/in/maximilianrelam/" target="_blank">Linkedin</a></p>
                         </div>
                     </div>
