--- a/resume.html
+++ b/resume.html
@@ -30,18 +30,18 @@
                 <div class="body-subheader">Resume/CV</div>
                 <h2>My personal resume</h2>
             </div>
-            
 
-            <div class="resume-info" style="display: flex; flex-direction: column; gap: 1rem; align-items: flex-start;">
-                <p>The pdf will be added here soon as well. I'm working on it right now, trying to make it look good.</p>
+
+            <!-- <div class="resume-info" style="display: flex; flex-direction: column; gap: 1rem; align-items: flex-start;">
+                 <p>The pdf will be added here soon as well. I'm working on it right now, trying to make it look good.</p>
                 <a href="assets/images/Maximilian-Relam-Wide-CV.pdf" target="_blank" class="button filled-button">
                     <i data-feather="file-text" class="icon-left"></i>
-                    View and download resume as PDF (opens in a new tab)
+                    View and download resume as PDF
                 </a>
-            </div>
+            </div> -->
 
 
-            <!-- <div class="resume">
+            <div class="resume">
                 <div class="contact-info">
                     <div class="contact-title">Contact information</div>
                     <div class="contact-card">
@@ -53,7 +53,7 @@
                             </div>
                             <div class="contact-column">
                                 <div class="contact-label">maximilian.relam@gmail.com</div>
-
+                                <div class="contact-value">github.com/maxrelam</div>
                             </div>
                         </div>
                     </div>
@@ -63,7 +63,7 @@
                     <div class="experience-list">
                         <div class="experience-card">
                             <div class="experience-header">
-                                <div class="experience-title bold">Koalitionen (UX/UI Designer)</div>
+                                <div class="experience-title">Koalitionen (UX/UI Designer)</div>
                                 <div class="experience-date">2021 – present</div>
                             </div>
                         </div>
@@ -72,12 +72,16 @@
                                 <div class="experience-title">Volvo Cars (consultant)</div>
                                 <div class="experience-date">2023 April – 2025 april</div>
                             </div>
-                            <div class="experience-description">At Volvo, I led the creation of a new design for an internal
+                            <div class="experience-description">At Volvo, I led the creation of a new design for an
+                                internal
                                 work system used to plan global car manufacturing schedules. My responsibility was to
                                 enhance user experience by redesigning user flow and incorporating modern, easy-to-use
-                                design elements that increased productivity and information accessibility. By collaborating
-                                with users, product owners, and developers, I ensured the system was accessible and aligned
-                                with the company's brand identity, enabling everyone to interact with it seamlessly and in a
+                                design elements that increased productivity and information accessibility. By
+                                collaborating
+                                with users, product owners, and developers, I ensured the system was accessible and
+                                aligned
+                                with the company's brand identity, enabling everyone to interact with it seamlessly and
+                                in a
                                 way that reflected the company's image and needs.</div>
                         </div>
                         <div class="experience-card">
@@ -87,24 +91,32 @@
                             </div>
                             <div class="experience-description">I worked as a consultant at Telia Sverige, where I was
                                 tasked with designing the logged-in state for their website, Mitt Telia. The goal was to
-                                update the user interface and user experience, while also making improvements to the current
+                                update the user interface and user experience, while also making improvements to the
+                                current
                                 version. In addition, I was the designer for Telia-Familj, a newly launched feature that
-                                allowed all members of a household to access and view their household services in one place.
-                                Telia was the first among its competitors to offer this kind of service, and Telia-Familj
-                                represented a milestone in the company's convergence strategy. By putting an even clearer
-                                focus on households, Telia was able to facilitate the daily lives of their customers.</div>
+                                allowed all members of a household to access and view their household services in one
+                                place.
+                                Telia was the first among its competitors to offer this kind of service, and
+                                Telia-Familj
+                                represented a milestone in the company's convergence strategy. By putting an even
+                                clearer
+                                focus on households, Telia was able to facilitate the daily lives of their customers.
+                            </div>
                         </div>
                         <div class="experience-card">
                             <div class="experience-header">
                                 <div class="experience-title">Coop Sverige (consultant)</div>
                                 <div class="experience-date">2021 June – 2022 February</div>
                             </div>
-                            <div class="experience-description">As the primary designer, I was responsible for building and
+                            <div class="experience-description">As the primary designer, I was responsible for building
+                                and
                                 designing a new B2B client portal for Coop Sverige AB that combined both old and new
                                 data-driven features with a clean, modern interface for both admins and clients. After
                                 conducting interviews with current Coop Admins, I adopted a task-focused design for the
-                                admin side, while ensuring easy access to information and product data on the client side. I
-                                sketched out new ideas, validated them through user testing, and iterated on them to prevent
+                                admin side, while ensuring easy access to information and product data on the client
+                                side. I
+                                sketched out new ideas, validated them through user testing, and iterated on them to
+                                prevent
                                 them from becoming overly complex.</div>
                         </div>
                         <div class="experience-card">
@@ -150,20 +162,34 @@
                     <div class="education-list">
                         <div class="education-card">
                             <div class="education-header">
-                                <div class="education-title">Yrgo, Digital Designer</div>
+                                <div class="experience-title">Yrgo, Digital Designer</div>
                             </div>
-                            <div class="education-description">During my time at Yrgo, I expanded my knowledge and skills in the field of digital design. This included working on motion design, digital production, interaction design, and usability.</div>
+                            <div class="education-description">During my time at Yrgo, I expanded my knowledge and
+                                skills in the field of digital design. This included working on motion design, digital
+                                production, interaction design, and usability.</div>
                         </div>
                         <div class="education-card">
                             <div class="education-header">
-                                <div class="education-title">Hyper Island, Digital Media Creative</div>
+                                <div class="experience-title">Hyper Island, Digital Media Creative</div>
                             </div>
-                            <div class="education-description">During my time at Hyper Island, I gained valuable experience in teamwork, user behaviour, and research methods. I also developed a strong understanding of holistic communication concepts and learned how to analyse data effectively. Additionally, I learned how to step out of my comfort zone and engage in reflective practice.</div>
+                            <div class="education-description">During my time at Hyper Island, I gained valuable
+                                experience in teamwork, user behaviour, and research methods. I also developed a strong
+                                understanding of holistic communication concepts and learned how to analyse data
+                                effectively. Additionally, I learned how to step out of my comfort zone and engage in
+                                reflective practice.</div>
                         </div>
                     </div>
                 </div>
-            </div> -->
+            </div>
+            <div class="resume-info" style="display: flex; flex-direction: column; gap: 1rem; align-items: flex-start;">
+                <!-- <p>The pdf will be added here soon as well. I'm working on it right now, trying to make it look good.</p> -->
+                <a href="assets/images/Maximilian-Relam-Wide-CV.pdf" target="_blank" class="button filled-button">
+                    <i data-feather="file-text" class="icon-left"></i>
+                    View and download resume as PDF
+                </a>
+            </div>
         </div>
+
     </div>
     </div>
     </div>
