invisible characters: &#8203; for the phone number and &#64; as an @ for the email

--- a/resume.html
+++ b/resume.html
@@ -7,8 +7,7 @@
     <meta http-equiv='cache-control' content='no-cache'>
     <meta http-equiv='expires' content='0'>
     <meta http-equiv='pragma' content='no-cache'>
-    <meta name="format-detection" content="telephone=no">
-    <meta name="chrome" content="nointentdetection">
+
     <link rel="stylesheet" href="css/main.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -50,11 +49,11 @@
                         <div class="contact-name">Maximilian Relam Wide</div>
                         <div class="contact-row">
                             <div class="contact-column">
-                                <div class="contact-label">0707 40 49 31</div>
+                                <div class="contact-label">0707 40 49 31&#8203</div>
                                 <div class="contact-value">linkedin.com/in/maximilianrelam</div>
                             </div>
                             <div class="contact-column">
-                                <div class="contact-label">maximilian.relam@gmail.com</div>
+                                <div class="contact-label">maximilian.relam&#64gmail.com</div>
                             </div>
                         </div>
                     </div>
