--- a/resume.html
+++ b/resume.html
@@ -49,7 +49,7 @@
                         <div class="contact-name">Maximilian Relam Wide</div>
                         <div class="contact-row">
                             <div class="contact-column">
-                                <div class="contact-label">0707 40 49 31&#8203</div>
+                                <div class="contact-label">0707&#8203 40&#8203 49&#8203 31&#8203</div>
                                 <div class="contact-value">linkedin.com/in/maximilianrelam</div>
                             </div>
                             <div class="contact-column">
