Added meta tag for Chrome intent detection in resume.html and commented out contact label styles in styles.css for future reference.

--- a/resume.html
+++ b/resume.html
@@ -7,6 +7,9 @@
     <meta http-equiv='cache-control' content='no-cache'>
     <meta http-equiv='expires' content='0'>
     <meta http-equiv='pragma' content='no-cache'>
+    <meta name="chrome" content="nointentdetection" />
+
+
 
     <link rel="stylesheet" href="css/main.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
