Added a second contact label for email in resume.html for test

--- a/resume.html
+++ b/resume.html
@@ -57,6 +57,8 @@
                             </div>
                             <div class="contact-column">
                                 <div class="contact-label">maximilian.relam&#64gmail.com</div>
+
+                                <div class="contact-label"><p style="text-decoration:none !important">maximilian.relam@gmail.com</p></div>
                             </div>
                         </div>
                     </div>
