--- a/resume.html
+++ b/resume.html
@@ -56,7 +56,7 @@
                                 <div class="contact-value">linkedin.com/in/maximilianrelam</div>
                             </div>
                             <div class="contact-column">
-                                <div class="contact-label">maximilian.relam&#64gmail.com</div>
+                                <!-- <div class="contact-label">maximilian.relam&#64gmail.com</div>   -->
 
                                 <div class="contact-label"><p style="text-decoration:none !important">maximilian.relam@gmail.com</p></div>
                             </div>
