Removed inverted class from the card-title in home.html to restore default styling for the contact section.

--- a/home.html
+++ b/home.html
@@ -259,7 +259,7 @@
 
                 </div>
                 <div class="content-block contact">
-                    <div class="card-title inverted">
+                    <div class="card-title">
                         Contact
                     </div>
                     <div class="contact-info">
