Updated home.html to change the featured project title and adjusted the order of titles. Modified styles.css to change background colors and text color for .card-title and .card-title.second for improved visibility and design consistency.

--- a/home.html
+++ b/home.html
@@ -197,8 +197,8 @@
                 <div class="content-block featured-project">
                     <a href="coop.html" class="featured-project-link">
                         <div class="titles">
-                            <div class="card-title">Coop Insights</div>
-                            <div class="card-title second">Tag 2</div>
+                            <div class="card-title">Featured Project</div>
+                            <div class="card-title second">Coop Insights</div>
                         </div>
                         <img src="assets/images/Coop/coop-insights-cover.png" alt="Coop Insights Project">
                     </a>
