Commented out the arrow button in home.html for biljetter since its not added yet

--- a/home.html
+++ b/home.html
@@ -182,9 +182,9 @@
                                 <div class="left-title big">
                                     <p>Biljetter (to be added)</p>             
                                 </div>
-                                <button class="arrowBtn">
+                                <!-- <button class="arrowBtn">
                                     <i class="feather-16" data-feather="arrow-right"></i>
-                                </button>
+                                </button> -->
                             </div>
 
 
