--- a/telia.html
+++ b/telia.html
@@ -22,7 +22,7 @@
 
 <body>
     <div class="section">
-        <div class="container">
+        <div class="container-work">
             <div class="back-button">
                 <a href="#" onclick="history.back(); return false;" class="arrowBtn">
                     <i class="feather-16" data-feather="arrow-left"></i>
