Updated project title in telia.html from "Mitt Telia Redesign & Telia-familj" to "Mitt Telia & Telia-familj".

--- a/telia.html
+++ b/telia.html
@@ -31,7 +31,7 @@
             </div>
 
             <div class="project-header">
-                <div class="project-title">Mitt Telia Redesign & Telia-familj</div>
+                <div class="project-title">Mitt Telia & Telia-familj</div>
                 <p class="project-description">A redesign of Telia Sverige's subscription management portal (Mitt Telia),
                     enhancing the logged-in experience to match their new app and introducing
                     Telia-Familj - a feature that lets families view and select bonuses for all
