telia.html -  added line break

--- a/telia.html
+++ b/telia.html
@@ -51,12 +51,13 @@
                 <p class="body-text">Mitt Telia's legacy infrastructure presented a unique challenge where
                     straightforward design solutions often encountered technical limitations. The
                     project required constant collaboration between design and development to find
-                    solutions that improved user experience while respecting system constraints.</p>
-                <p class="body-text">The main challenge in designing Telia-familj was creating a simple user
+                    solutions that improved user experience while respecting system constraints.
+                <br><br>
+                The main challenge in designing Telia-familj was creating a simple user
                     experience for complex household bonus scenarios. When multiple family members
                     have active bonuses, how do we clearly communicate the impact of changing these
                     selections? The design needed to guide users through these decisions while
-                    keeping the interface intuitive and preventing confusion.</p>
+                    keeping the interface intuitive and preventing confusion.
             </div>
 
             <div class="divider"></div>
