--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
     <script>
         document.addEventListener('DOMContentLoaded', function() {
             feather.replace();
-            initNavigation('home');
+            initNavigation('index');
         });
     </script>
 </body>
